# email-ops-env

./: .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
env/: environment.py  models.py
graders/: graders.py
scenarios/: emails.py
server/: app.py
tests/: test_score_sanitization.py
tools/: crm.py
