[project]
name = "email-ops-env"
version = "2.0.0"
description = "Email Operations Center OpenEnv v2 — agentic email triage environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "openai>=1.57.0",
    "requests>=2.32.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "graders*", "scenarios*", "tools*"]